@@ -835,11 +835,7 @@ _cygtls::interrupt_setup (siginfo_t& si, void *handler, struct sigaction& siga)
   this->sig = si.si_signo;		// Should always be last thing set to avoid a race
 
   if (incyg)
-    {
-      if (!signal_arrived)
-	create_signal_arrived ();
-      SetEvent (signal_arrived);
-    }
+    SetEvent (get_signal_arrived ());
 
   proc_subproc (PROC_CLEARWAIT, 1);
   sigproc_printf ("armed signal_arrived %p, signal %d", signal_arrived, si.si_signo);
